# ISAM-tree

./: CMakeLists.txt  ISAM.hpp  README.md  main.cpp  record.hpp
database/: movies_and_series.dat_dataId.isam  movies_and_series.dat_dataId_index_3.isam
inc/: ISAM.hpp  pages.hpp  record.hpp  utils.hpp
src/: generate_file.cpp  index_by_data_id.cpp  isam_create_index.cpp  isam_equality_search.cpp  isam_insert_record.cpp  isam_range_search.cpp  isam_remove.cpp  isam_search_all.cpp  isam_search_index.cpp  isam_search_record.cpp  main.cpp  read_sorted_file.cpp
